--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,7 @@
-version: '3.8'
-
 services:
-  minio:
-    image: quay.io/minio/minio
-    container_name: minio
-    ports:
-      - "9000:9000"
-      - "9090:9090"
-    environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: admin123
-    volumes:
-      - minio_data:/data
-    command: server /data --console-address ":9090"
-
   postgres:
     image: postgres:14
-    container_name: postgres
+    container_name: tlc_postgres
     ports:
       - "5432:5432"
     environment:
@@ -28,7 +13,7 @@ services:
 
   hive-metastore:
     image: apache/hive:4.0.0-alpha-2
-    container_name: hive-metastore
+    container_name: tlc_hive-metastore
     depends_on:
       - postgres
     ports:
@@ -45,16 +30,44 @@ services:
 
   trino:
     image: trinodb/trino:latest
-    container_name: trino
+    container_name: tlc_trino
     depends_on:
       - hive-metastore
-      - minio
     ports:
       - "8081:8080"
     volumes:
-      - ./trino-config:/etc/trino
-      - ./db:/data/warehouse
+      - ./infra/trino_docker/trino-config:/etc/trino
+      - ./infra/trino_docker/db:/data/warehouse
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.app
+    container_name: tlc_app
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - TRINO_HOST=trino
+      - TRINO_PORT=8080
+    depends_on:
+      - postgres
+      - trino
+
+  optimizer_service:
+    build:
+      context: .
+      dockerfile: Dockerfile.optimizer
+    container_name: tlc_optimizer_service
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - TRINO_HOST=trino
+      - TRINO_PORT=8080
+      - API_BASE_URL=${API_BASE_URL}
+      - API_KEY=${API_KEY}
+    depends_on:
+      - postgres
+      - trino
 
 volumes:
-  minio_data:
   postgres_data:
