--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pexpect==4.9.0
 platformdirs==4.4.0
 prompt_toolkit==3.0.52
 psutil==7.1.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.12.0a1
